--- a/Example/KLTarBarTransition/Base.lproj/Main.storyboard
+++ b/Example/KLTarBarTransition/Base.lproj/Main.storyboard
@@ -26,13 +26,13 @@
             </objects>
             <point key="canvasLocation" x="1164" y="467"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="m7y-bK-cRy">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tRZ-vs-Mks" customClass="KLNavigationController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="uF2-L0-LTE"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tRZ-vs-Mks" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="history" id="uF2-L0-LTE"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lnm-iu-VAB" customClass="KLNavigationBar">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lnm-iu-VAB">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -51,6 +51,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="6hW-92-DCD" customClass="KLTabBarViewController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R2j-eg-DKW">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,13 +66,13 @@
             </objects>
             <point key="canvasLocation" x="-999" y="944"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="qo0-kL-LHL">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cEl-wM-l3g" customClass="KLNavigationController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="xPk-u5-zeh"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cEl-wM-l3g" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="xPk-u5-zeh"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gef-YC-4Gp" customClass="KLNavigationBar">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gef-YC-4Gp">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -84,13 +85,13 @@
             </objects>
             <point key="canvasLocation" x="330" y="1169"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="U5g-FO-ca9">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VMp-hR-rUE" customClass="KLNavigationController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="B8p-XT-d9Z"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VMp-hR-rUE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="search" id="B8p-XT-d9Z"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bdv-aT-ha8" customClass="KLNavigationBar">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bdv-aT-ha8">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
